test/class/basic.out
error: basic.li:1:1: unexpected token
│ class pair
│ ~~~~~
│ ^
